HelpMePlay | 1.1.2
	Fixes and Updates:
		- Removed the quest icon feature.